# SSHWarden

./: .gitignore  BUILD.md  Cargo.toml  GITHUB_ACTIONS.md  LICENSE  NOTICE  README.md  app.manifest  build.rs  config.toml.example
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
crates/sshwarden-agent/: Cargo.toml
crates/sshwarden-agent/src/: agent.rs  control.rs  lib.rs  named_pipe_listener_stream.rs  peercred_unix_listener_stream.rs  request_parser.rs  unix.rs  windows.rs
crates/sshwarden-agent/src/peerinfo/: models.rs
crates/sshwarden-api/: Cargo.toml
crates/sshwarden-api/src/: client.rs  crypto.rs  lib.rs  models.rs  notifications.rs
crates/sshwarden-config/: Cargo.toml
crates/sshwarden-config/src/: lib.rs  session.rs  vault.rs
crates/sshwarden-ui/: Cargo.toml  build.rs
crates/sshwarden-ui/examples/: test_prompts.rs
crates/sshwarden-ui/src/: lib.rs
crates/sshwarden-ui/src/notify/: fallback.rs  mod.rs  slint_dialog.rs  windows.rs
crates/sshwarden-ui/src/unlock/: fallback.rs  hello_crypto.rs  mod.rs  slint_dialog.rs  windows.rs
llmdoc/: index.md
llmdoc/architecture/: biometric-cross-platform-architecture.md  biometric-pin-app-integration.md  ipc-control-channel.md  pin-lock-architecture.md  slint-authorization-dialog.md  ssh-agent-authorization-flow.md  ssh-agent-data-flow.md  ssh-agent-key-management.md  ssh-agent-platform-implementations.md  sshwarden-main-loop.md  sshwarden-pin-encryption.md  sshwarden-windows-hello-unlock.md  windows-hello-biometric-flow.md  windows-toast-notification-flow.md
llmdoc/guides/: how-pin-lock-works.md  how-ssh-agent-starts.md  how-ssh-keys-are-protected.md  how-ssh-request-approval-works.md  how-to-configure-biometric-and-pin.md  how-to-use-cli-commands.md  how-windows-hello-unlock-works.md
llmdoc/overview/: project-overview.md  ssh-agent-architecture-overview.md
llmdoc/reference/: biometric-platform-comparison.md  coding-conventions.md  git-conventions.md  ipc-control-protocol.md  platform-comparison-table.md  ssh-agent-ipc-channels.md
src/: main.rs
