[package]
name = "sshwarden-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bitwarden-russh = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssh-key = { workspace = true, features = ["encryption", "ed25519", "rsa", "getrandom"] }
sysinfo = { workspace = true, features = ["windows"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync", "macros", "net"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
pin-project = "1"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
homedir = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
