[package]
name = "sshwarden-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
sshwarden-api = { path = "../sshwarden-api" }
slint = { version = "1.15", features = ["unstable-winit-030"] }
slint-center-win = "0.3"

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"
scopeguard = "1"
windows = { version = "0.61", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Security_Credentials_UI",
    "Security_Credentials",
    "Security_Cryptography",
    "Storage_Streams",
    "Win32_Security_Credentials",
    "Win32_System_WinRT",
] }
windows-core = "0.61"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[build-dependencies]
winresource = "0.1"

[lints]
workspace = true
